# pq-vector

./: .gitignore  AGENTS.md  BLOG_POST.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  flake.nix
.github/workflows/: ci.yml  release-pr.yml  release.yml
benches/: bench_util.rs  benchmark.rs  index_build.rs  query.rs
examples/: benchmark.rs  build_and_query.rs  build_index.rs  check_pages.rs  datafusion_array_bug.rs  datafusion_sql.rs  datafusion_topk.rs  debug_recall.rs  topk_search.rs  verify_correctness.rs
examples/common/: mod.rs
src/: ivf.rs  lib.rs  udtf.rs
src/df_vector/: access.rs  exec.rs  expr.rs  filter.rs  index_exec.rs  logical.rs  mod.rs  options.rs  physical.rs  planner.rs  session.rs  tests.rs
src/df_vector/snapshots/: pq_vector__df_vector__tests__vector_topk_combined_tree.snap  pq_vector__df_vector__tests__vector_topk_filter_plan_tree.snap  pq_vector__df_vector__tests__vector_topk_plan_tree.snap  pq_vector__df_vector__tests__vector_topk_vldb_tree.snap
src/hnsw/: index.rs  mod.rs  parquet.rs  search.rs
src/ivf/: index.rs  mod.rs  parquet.rs  search.rs
