[package]
name = "pq-vector"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "57.2.0"
async-trait = "0.1"
datafusion = "52.0.0"
futures = "0.3"
parquet = { version = "57.2.0", features = ["async"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }

[dev-dependencies]
insta = "1.46.1"
tempfile = "3"

[profile.dev.package.insta]
opt-level = 3

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[patch.crates-io]
datafusion = { git = "https://github.com/apache/datafusion.git", branch = "main" }
