[package]
name = "pq-vector"
version = "0.1.0"
edition = "2024"
description = "Vector search with Parquet and DataFusion."
license = "MIT"
repository = "https://github.com/XiangpengHao/pq-vector"
readme = "README.md"
documentation = "https://docs.rs/pq-vector"
keywords = ["vector", "parquet", "datafusion", "search"]
categories = ["algorithms", "database-implementations"]

[dependencies]
arrow = "57.2.0"
async-trait = "0.1"
datafusion = "52.0.0"
futures = "0.3"
parquet = { version = "57.2.0", features = ["async"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }

[dev-dependencies]
insta = "1.46.1"
mimalloc = "0.1"
tempfile = "3"

[profile.dev.package.insta]
opt-level = 3

[[bench]]
name = "index_build"
path = "benches/index_build.rs"
harness = false

[[bench]]
name = "query"
path = "benches/query.rs"
harness = false
